# Catan-project

./: ARCHITECTURE_AUDIT.md  CLEANUP_PLAN.md  README.md  pyproject.toml
scripts/: run_debug_game.py  run_local_pygame.py
src/catan/controllers/: base.py  bot_catalog.py  bot_placeholder_controller.py  heuristic_bot_controller.py  heuristic_params.py  heuristic_strategic_helpers.py  heuristic_v1_1_bot_controller.py  heuristic_v1_baseline_bot_controller.py  heuristic_v2_1_strategic_bot_controller.py  heuristic_v2_position_evaluator.py  heuristic_v2_positional_bot_controller.py  heuristic_v2_profiling.py  heuristic_v3_lookahead_bot_controller.py  human_controller.py  (+2 more)
tests/controllers/: test_bot_catalog.py  test_bot_lab_workflow.py  test_heuristic_bot_controller.py  test_heuristic_v1_1_bot_controller.py  test_heuristic_v1_baseline_bot_controller.py  test_heuristic_v2_1_strategic_bot_controller.py  test_heuristic_v2_positional_bot_controller.py  test_heuristic_v3_lookahead_bot_controller.py  test_human_controller.py  test_random_bot_controller.py  test_simple_goal_bot_controller.py
tests/core/: test_apply_action_characterization.py  test_awards.py  test_bank_trade.py  test_board_factory.py  test_dev_cards.py  test_engine_mvp.py  test_invariants.py  test_player_trade.py  test_robber_flow.py
tests/runners/: test_local_pygame_runner.py  test_tournament_runner.py  test_training.py
tests/ui/: test_app_event_log.py  test_input_mapper_steal.py  test_menu_setup_flow.py  test_pygame_init_order.py  test_renderer_helpers.py  test_spectator_mode.py  test_ui_refactor_state.py
(+20 files in other folders)
