[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catan"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
ui = ["pygame>=2.5"]
test = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
